# test-task

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: sign.h
src/: pybind_sign.cpp  sign.cpp
test/: test.py
